--- a/chrony.conf
+++ b/chrony.conf
@@ -1,4 +1,5 @@
-pool time.cloudflare.com iburst nts
+server time.cloudflare.com iburst nts
+
 
 ntsservercert /etc/chrony/server.crt
 ntsserverkey /etc/chrony/server.key
